layout/painting/nsDisplayList.h
@@ -4652,9 +4652,6 @@ class nsDisplayBackgroundImage : public nsDisplayImageContainer {
     if (aFrame == mDependentFrame) {
       mDependentFrame = nullptr;
     }
-    if (mAssociatedImage && aFrame == mFrame) {
-      DisassociateImage();
-    }
     nsDisplayImageContainer::RemoveFrame(aFrame);
   }
 
@@ -4666,9 +4663,6 @@ class nsDisplayBackgroundImage : public nsDisplayImageContainer {
                                      nsDisplayListBuilder* aBuilder);
   nsRect GetBoundsInternal(nsDisplayListBuilder* aBuilder,
                            nsIFrame* aFrameForBounds = nullptr);
-
-  void AssociateImageIfNeeded();
-  void DisassociateImage();
 
   void PaintInternal(nsDisplayListBuilder* aBuilder, gfxContext* aCtx,
                      const nsRect& aBounds, nsRect* aClipRect);
@@ -4698,8 +4692,6 @@ class nsDisplayBackgroundImage : public nsDisplayImageContainer {
   /* Whether the image should be treated as fixed to the viewport. */
   bool mShouldFixToViewport;
   uint32_t mImageFlags;
-  bool mAssociatedImage;
-  bool mTriedToAssociateImage;
 };
 
 enum class TableType : uint8_t {
